#22443 Add variants to Experiment